# rodeo

./: .gitignore  .readthedocs.yml  CHANGELOG.md  LICENSE.txt  README.md  TODO.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: build_test.yml
docs/: basic.rst  conf.py  dalton.rst  examples.rst  fenrir.rst  gauss_markov.rst  ibm.rst  indep_init.rst  index.md  index.rst  inference.rst  interrogate.rst  kalmantv.rst  magi.rst  marginal_mcmc.rst  oc_mcmc.rst  ode.rst  ode_solve.rst  prior.rst  random_walk.rst  requirements.txt  solve.rst  utils.rst
docs/examples/: higher_order.md  latexdefs.tex  lorenz.md  lorenz63.md  parameter.md  tutorial.md
docs/examples/notebooks/: higher_order.ipynb  lorenz.ipynb  lorenz63.ipynb  parameter.ipynb  tutorial.ipynb
docs/notebooks/: latexdefs.tex  tutorial.md
docs/notebooks/internal/: tutorial.ipynb
examples/: chkrebtii_graph.py  euler.py  fenrir.py  figures.ipynb  fitz.py  fitz_solve.py  fitz_time.py  hes1.py  hes1_time.py  ibm_nb_init.py  oc_mcmc.ipynb  ode_nb_solve.py  seirah.py  seirah_time.py  setup.py  solve_nb.py  timings.py  tutorial.ipynb
examples/dalton/: fitz_ex1.py  fitz_ex2.py  lorenz_ex1.py  lorenz_ex2.py  naive.py  theta_plot.py
examples/inference/: fitz_inference.py  fitz_ocmcmc.py  fitzinf.py  hes1_inference.py  inference.py  lininf.py  oc_mcmc.py  seirah_inference.py  seirahinf.py  theta_plot.py
examples/inference/deprecated/: hes1inf.py
examples/rodeo/: chkrebtii_graph.py  chkrebtii_time.py  figure_rep.py  figures.ipynb  fitz.py  fitz_solve.py  fitz_time.py  hes1.py  ibm_nb.py  ode_nb.py  seirah.py  seirah_time.py  timings.ipynb  timings.py
examples/rodeo/deprecated/: chkrebtii_time.py  fitz.py
examples/rodeo/deprecated/inference/: inference.py
examples/rodeo/inference/: fitz_ocmcmc.py  inference.py  theta_plot.py
examples/rodeo/inference/deprecated/: fitzinf.py  seirahinf.py
rodeo/: kalmantv.py  ode_solve.py  utils.py
src/rodeo/: __init__.py  basic.py  dalton.py  ekf.py  fenrir.py  gauss_markov.py  ibm.py  interrogate.py  kalmantv.py  magi.py  oc_mcmc.py  ode.py  solve.py  utils.py
src/rodeo/inference/: __init__.py  basic.py  dalton.py  fenrir.py  magi.py  marginal_mcmc.py  pseudo_marginal.py  random_walk_aux.py
src/rodeo/kalmantv/: square_root.py  standard.py
src/rodeo/prior/: __init__.py  ibm.py  indep_init.py
tests/: gauss_markov.py  ode_block_solve_for.py  ode_forward.py  test_add_sqrt.py  test_ekf.py  test_fitz.py  test_kalmangm.py  test_kalmanjit.py  test_rodeofor.py  test_rodeojit.py  test_square_root.py  test_standard.py  utils.py
tests/interactive/: InferenceTest.ipynb  InferenceTest2.ipynb  bridge.ipynb  double_filter.py  fenrir.ipynb  fenrir.py  fenrir_filter.py  filter.ipynb  filter_inference.py  fitz_ex1.py  fitz_ex2.py  ibm_bridge.py  ibm_init.py  kalman_chol_prod.py  lorenz.py  lorenz_ex2.py  mcmc.ipynb  ode_bridge.py  pope.py  taylor_filter.py  test_fenrir.py  test_fenrirng.py  test_gmp.py  test_kalman.py  theta_plot.py  utils.py
tests/interactive/inference/: hes1inf.py  inference.py  lininf.py  seirahinf.py
