[metadata]
name = rodeo
version = attr: rodeo.__version__
author = attr: rodeo.__author__
author_email = mlysy@uwaterloo.ca
description = Probabilistic ODE Solver in Jax
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mlysy/rodeo
project_urls =
    Bug Tracker = https://github.com/mlysy/rodeo/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL-3 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    jaxlib
    jax

[options.extras_require]
docs =
    numpy
    scipy
    pandas
    matplotlib
    seaborn
    myst_nb
    sphinx_rtd_theme
    jupytext

[options.packages.find]
where = src
