[metadata]
name = rodeo
version = attr: rodeo.__version__
author = attr: rodeo.__author__
author_email = mlysy@uwaterloo.ca
description = Probabilistic ODE Solver in Jax
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mlysy/rodeo
project_urls =
    Bug Tracker = https://github.com/mlysy/rodeo/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    jaxlib
    jax
    blackjax

[options.extras_require]
docs =
    numpy
    scipy
    pandas
    numba
    jaxopt
    diffrax
    matplotlib
    seaborn
    myst_nb
    sphinx_rtd_theme
    jupytext
    jupyter
    
[options.packages.find]
where = src
