[metadata]
name = rodeo
version = attr: rodeo.__version__
author = "Mohan Wu, Martin Lysy"
author_email = mlysy@uwaterloo.ca
description = Probabilistic Methods of Parameter Inference for ODEs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mlysy/rodeo
project_urls =
    Bug Tracker = https://github.com/mlysy/rodeo/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    jaxlib
    jax
    blackjax <= 1.2.3

[options.extras_require]
docs =
    numpy
    scipy
    pandas
    numba
    jaxopt
    diffrax
    matplotlib
    seaborn
    myst_nb
    sphinx_rtd_theme
    jupytext
    jupyter
    
[options.packages.find]
where = src
